# run0-wrappers

./: INSTALL.md  NEWS  README.md  meson.build  meson_options.txt
.github/workflows/: ci-opensuse.yml
man/: meson.build  pkexec.1  run0-pkexec.1.xml  run0-su.1.xml  run0-sudo.1.xml  su.1  sudo.1  sudo.conf.5.xml
polkit/: 50-run0-sudo.rules  meson.build
profile.d/: run0-wrappers.sh
src/: nnpenabled.c  run0-pkexec.sh.in  run0-su.sh.in  run0-sudo.sh.in
tests/: meson.build  tst-run0-pkexec-1.sh  tst-run0-pkexec-2.sh  tst-run0-pkexec-3.sh  tst-run0-su-1.sh  tst-run0-su-2.sh  tst-run0-su-3.sh  tst-run0-su-4.sh  tst-run0-su-5.sh  tst-run0-su-6.sh  tst-run0-sudo-1.sh  tst-run0-sudo-2.sh  tst-run0-sudo-3.sh  tst-run0-sudo-4.sh  tst-run0-sudo-5.sh  tst-run0-sudo-6.sh  tst-run0-sudo-7.sh  tst-run0-sudo-8.sh  tst-run0-sudo-9.sh
