option('man', type : 'feature', value : 'auto',
       description : 'build and install man pages')
option('pkexec-compat', type : 'boolean', value : false,
       description : 'install pkexec compat symlink and manual page')
option('su-compat', type : 'boolean', value : false,
       description : 'install su compat symlink and manual page')
option('sudo-compat', type : 'boolean', value : true,
       description : 'install sudo compat symlink and manual page')
